# zhban

./: .gitignore  CMakeLists.txt  README.rst  cyzhban.pxd  cyzhban.pyx  logging.c  para3.txt  run  setup.py  test.c  test.py  utf.c  zhban-internal.h  zhban.c  zhban.h  zhban.py
python/: install.sh.in  setup.py
python/zhban/: __init__.py  divide.py  test.py
